--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login">Login</string>
     <string name="don_t_have_an_account">Don't have an account?</string>
     <string name="sign_up">Sign Up</string>
+    <string name="cont_desc_friend_image">friend image</string>
 </resources>
