add ui sign up & fix edit text on login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="don_t_have_an_account">Don't have an account?</string>
     <string name="sign_up">Sign Up</string>
     <string name="cont_desc_friend_image">friend image</string>
+    <string name="placeholder_name">Name</string>
+    <string name="placeholder_birth_date">Birth Date</string>
+    <string name="placeholder_origin">Origin</string>
 </resources>
