add logic upload data to storage & firestore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Project MA Simulation 1</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="placeholder_email">Email Address</string>
     <string name="placeholder_password">Password</string>
     <string name="forgot_password">Forgot password?</string>
@@ -10,7 +9,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="cont_desc_friend_image">friend image</string>
     <string name="placeholder_name">Name</string>
-    <string name="placeholder_birth_date">Birth Date</string>
     <string name="placeholder_origin">Origin</string>
     <string name="back_to_home_screen">back to home screen</string>
     <string name="log_out">Log out</string>
@@ -25,4 +23,14 @@
     <string name="add_friend_photo">add friend photo</string>
     <string name="cont_desc_new_friend_photo">New friend photo</string>
     <string name="cont_desc_add_new_friend">add new friend</string>
+    <string name="request_camera_title">Request access camera</string>
+    <string name="request_camera_desc">In order to get picture, you have to grant camera permission for this application</string>
+    <string name="error_empty_field">Field cannot be empty</string>
+    <string name="okay">OK</string>
+    <string name="no_thanks">No thanks</string>
+    <string name="uploading">Uploading…</string>
+    <string name="upload_complete">Upload completed</string>
+    <string name="error_upload_failed">Upload failed</string>
+    <string name="error_login_failed">Login failed</string>
+    <string name="error_sign_up_failed">Sign up failed</string>
 </resources>
